--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,10 @@ body {
     background-color: #f0f0f0;
     text-align: center;
     margin: 0;
+    display: flex;
+    flex-direction: column;
     padding: 20px;
+    width: fit-content;
 }
 
 h1, h2 {
