--- a/treward.css
+++ b/treward.css
@@ -31,3 +31,26 @@ body {
     z-index: 50;
     color: black;
 }
+
+.home{
+    z-index: 50;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+button {
+    background-color: #FFC451;
+    color: #FFFFFF;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+    text-decoration: none;
+    display: inline-block;
+}
+
+button:hover {
+    background-color: #5E3A3F;
+}
